Day-05-Kubernetes/Project-45/k8s/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-45-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-45-app1
  template:
    metadata:
      labels:
        app: project-45-app1
    spec:
      containers:
        - name: app1
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: project-45-app1
spec:
  selector:
    app: project-45-app1
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
