Day-05-Kubernetes/Project-45/k8s/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-45-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-45-app2
  template:
    metadata:
      labels:
        app: project-45-app2
    spec:
      containers:
        - name: app2
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: project-45-app2
spec:
  selector:
    app: project-45-app2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
